# gemini_core

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: build_and_push.yml  deploy_docs.yml  make_release.yml  run_tests.yml
docs/: index.md
docs/reference/: config.md  gemini.md
src/gemini_core/: __init__.py  gemini.py  schemas.py
src/gemini_core/config/: __init__.py  config.py
src/gemini_core/data_models/: __init__.py  models.py
src/gemini_core/utils/: __init__.py  multimodal.py  utils.py
tests/: test_gemini.py
